# app-carbon-farm-network

./: .gitignore  Cargo.toml  Console.txt  README.md  flake.nix  h  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
dnas/acfn/workdir/: dna.yaml
dnas/migration/workdir/: dna.yaml
scripts/: update-hrea-modules.sh
tests/: package.json
ui/: .eslintrc.cjs  .gitignore  .prettierrc.cjs  do  flake.nix  globals.d.ts  package.json  package.json.bak  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.js  we.ts  zip.js
ui/.svelte-kit/: ambient.d.ts
ui/src/: App.svelte  app.css  app.html  global.css  main.ts  store.ts  utils.ts
ui/src/crud/: commit.ts  fetch.ts  import.ts  shared.ts  store.ts
ui/src/crud2/: effect.ts  store.ts
ui/src/data/: agents.json
ui/src/lib/: AgentModal.svelte  CommitmentModal.svelte  EconomicEventModal.svelte  EconomicResourceModal.svelte  Error.svelte  Export.svelte  FacetModal.svelte  FacetValueModal.svelte  Header.svelte  Initialize.svelte  Loading.svelte  Logo.svelte  Map.svelte  Nav.svelte  OfferModal.svelte  PlanModal.svelte  ProcessSpecificationModal.svelte  RecipeExchangeModal.svelte  RecipeFlowModal.svelte  RecipeInputModal.svelte  RecipeOutputModal.svelte  RecipeProcessModal.svelte  RequestModal.svelte  ResourceSpecificationModal.svelte  Search.svelte  SidePanel.svelte  UnitModal.svelte  Units.svelte  icons.ts  svgIcons.ts  utils.ts
ui/src/routes/: +layout.svelte  +layout.ts  +page.svelte  __error.svelte  index.html
we_dev/: config.json  config.ts
workdir/: dna.yaml  happ.yaml  web-happ.yaml
(+103 files in other folders)
